--- a/prac_08/convert_miles_to_km.kv
+++ b/prac_08/convert_miles_to_km.kv
@@ -1,1 +1,20 @@
-
+BoxLayout:
+    orientation: 'vertical'
+    BoxLayout:
+        orientation: 'horizontal'
+        TextInput:
+            id: input_number
+            text: ''
+        BoxLayout:
+        orientation: 'vertical'
+            Button:
+                text: 'Up'
+            Button:
+                text: 'Down'
+    Button:
+        text: 'Convert miles to km'
+        on_press: app.calculate_conversion()
+    Label:
+        id: output_label
+        text: ''
+        color: (0, 1, 1, 1)
