--- a/prac_08/convert_miles_to_km.kv
+++ b/prac_08/convert_miles_to_km.kv
@@ -4,13 +4,16 @@ BoxLayout:
         orientation: 'horizontal'
         TextInput:
             id: input_number
-            text: ''
+            text: '34'
         BoxLayout:
-        orientation: 'vertical'
+            orientation: 'vertical'
+            size_hint_x: 0.25
             Button:
                 text: 'Up'
+                on_press: app.handle_increment(1)
             Button:
                 text: 'Down'
+                on_press: app.handle_increment(-1)
     Button:
         text: 'Convert miles to km'
         on_press: app.calculate_conversion()
