--- a/prac_08/convert_miles_to_km.kv
+++ b/prac_08/convert_miles_to_km.kv
@@ -6,6 +6,7 @@ BoxLayout:
             id: input_number
             multiline: False
             on_text_validate: app.handle_update()
+            on_text: app.calculate_conversion()
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.25
@@ -15,9 +16,9 @@ BoxLayout:
             Button:
                 text: 'Down'
                 on_press: app.handle_increment(-1)
-    Button:
-        text: 'Convert miles to km'
-        on_press: app.calculate_conversion()
+#    Button:
+#        text: 'Convert miles to km'
+#        on_press: app.calculate_conversion()
     Label:
         id: output_label
         text: app.number
